src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>内容</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>IsEvacuationCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>避難場所</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MainImageURL__c</fullName>
        <label>Main Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShortDescription__c</fullName>
        <label>概要</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>種類</label>
        <picklist>
            <picklistValues>
                <fullName>海岸</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>レストラン</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ホームセンター</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>図書館</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>イベント施設</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>学校</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>場所</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>